testing navigation in production

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,9 +7,9 @@
     <title>PwdMngrWasm</title>
 
     <!--In production mode, the following line should be used to set the base path of the application.-->
-    <!--<base href="/PwdMngr/" />-->
+    <base href="/PW9/" />
     <!--In development mode, use the following line instead:-->
-    <base href="/" />
+    <!--<base href="/" />-->
 
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
